[project]
name = "glass"
version = "0.1.0"
description = "unofficial implementation of glass with PyTorch Lightning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py >= 3.11.0",
    "lightning >= 2.4.0",
    "matplotlib >= 3.8.4",
    "numpy >= 1.26.2",
    "polars >= 0.20.23",
    "pyyaml >= 6.0.1",
    "scipy >= 1.13.0",
    "scikit-learn >= 1.4.2",
    "torch == 2.4.0+cu118",
    "tqdm >= 4.64",
]


[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu118"]
dev-dependencies = [
    "ipywidgets>=8.1.2",
    "mlflow>=2.12.1",
    "notebook>=7.1.2",
]


[tool.uv.sources]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/glass", "src"]
